--- a/style.css
+++ b/style.css
@@ -33838,21 +33838,21 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-sheet-1 {
-  min-height: 80px;
+  min-height: 112px;
 }
 
 .u-header .u-image-1 {
   animation-duration: 1000ms;
-  margin: 22px auto 0 0;
+  margin: 22px auto 0 -35px;
 }
 
 .u-header .u-logo-image-1 {
-  max-width: 64px;
-  max-height: 64px;
+  max-width: 70px;
+  max-height: 70px;
 }
 
 .u-header .u-menu-1 {
-  margin: -32px 0 22px auto;
+  margin: -38px 0 22px auto;
 }
 
 .u-header .u-nav-1 {
@@ -33866,6 +33866,10 @@ a.u-link.u-text-hover-grey-90:hover {
   font-size: 1.25rem;
 }
 @media (max-width: 1199px) {
+  .u-header .u-image-1 {
+    margin-left: -35px;
+  }
+
   .u-header .u-menu-1 {
     width: auto;
   }
