--- a/style.css
+++ b/style.css
@@ -33838,12 +33838,12 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-sheet-1 {
-  min-height: 112px;
+  min-height: 114px;
 }
 
 .u-header .u-image-1 {
   animation-duration: 1000ms;
-  margin: 22px auto 0 -35px;
+  margin: 22px auto 0 -30px;
 }
 
 .u-header .u-logo-image-1 {
@@ -33867,7 +33867,8 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 @media (max-width: 1199px) {
   .u-header .u-image-1 {
-    margin-left: -35px;
+    width: auto;
+    margin-left: 0;
   }
 
   .u-header .u-menu-1 {
