--- a/Galerie.css
+++ b/Galerie.css
@@ -1,4 +1,4 @@
-.u-section-1 {
+ .u-section-1 {
   background-image: none;
 }
 
@@ -86,7 +86,7 @@
 }
 
 .u-section-1 .u-gallery-item-10 {
-  margin-left: 0;
+  margin: 32px 0 3px;
 }
 
 .u-section-1 .u-over-slide-10 {
@@ -353,7 +353,7 @@
     margin-left: 0;
     margin-right: 0;
   }
-}.u-section-3 {
+} .u-section-3 {
   background-image: none;
   min-height: 255px;
 }
@@ -429,7 +429,7 @@
 }
 
 @media (max-width: 1199px) {
-  .u-section-3 {
+   .u-section-3 {
     min-height: 299px;
   }
 
@@ -489,7 +489,7 @@
 }
 
 @media (max-width: 991px) {
-  .u-section-3 {
+   .u-section-3 {
     min-height: 169px;
   }
 
@@ -533,7 +533,7 @@
 }
 
 @media (max-width: 767px) {
-  .u-section-3 {
+   .u-section-3 {
     min-height: 269px;
   }
 
