--- a/Accueil.css
+++ b/Accueil.css
@@ -369,12 +369,11 @@
 .u-section-3 .u-btn-2 {
   margin-left: 0;
   margin-right: 0;
-  background-image: none;
-  text-transform: uppercase;
   letter-spacing: 1px;
   font-size: 0.875rem;
-  font-weight: 700;
   border-style: none;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
 .u-section-3 .u-layout-cell-2 {
@@ -421,16 +420,78 @@
 }
 
 .u-section-4 .u-sheet-1 {
-  min-height: 874px;
+  min-height: 804px;
+}
+
+.u-section-4 .u-blog-1 {
+  margin-bottom: 0;
+  margin-top: 228px;
+}
+
+.u-section-4 .u-repeater-1 {
+  grid-auto-columns: calc(50% - 5px);
+  grid-template-columns: calc(50% - 5px) calc(50% - 5px);
+  grid-gap: 10px 10px;
+  min-height: 444px;
+}
+
+.u-section-4 .u-container-layout-1 {
+  padding: 30px;
+}
+
+.u-section-4 .u-image-1 {
+  height: 140px;
+  margin-top: 20px;
+}
+
+.u-section-4 .u-container-layout-2 {
+  padding: 30px;
+}
+
+.u-section-4 .u-image-2 {
+  height: 140px;
+  margin-top: 20px;
+}
+
+.u-section-4 .u-container-layout-3 {
+  padding: 30px;
+}
+
+.u-section-4 .u-image-3 {
+  height: 140px;
+  margin-top: 20px;
+}
+
+.u-section-4 .u-container-layout-4 {
+  padding: 30px;
+}
+
+.u-section-4 .u-image-4 {
+  height: 140px;
+  margin-top: 20px;
+}
+
+.u-section-4 .u-gallery-nav-1 {
+  position: absolute;
+  left: 10px;
+  width: 40px;
+  height: 40px;
+}
+
+.u-section-4 .u-gallery-nav-2 {
+  position: absolute;
+  right: 10px;
+  width: 40px;
+  height: 40px;
 }
 
 .u-section-4 .u-group-1 {
   width: 755px;
   min-height: 200px;
-  margin: 44px auto 0 0;
+  margin: -611px auto 0 0;
 }
 
-.u-section-4 .u-text-1 {
+.u-section-4 .u-text-9 {
   margin-left: 20px;
   margin-right: 20px;
   letter-spacing: 2px;
@@ -443,30 +504,10 @@
   padding: 0;
 }
 
-.u-section-4 .u-text-2 {
+.u-section-4 .u-text-10 {
   font-size: 0.875rem;
   font-style: italic;
   margin: 20px 20px 0;
-}
-
-.u-section-4 .u-layout-wrap-1 {
-  margin-top: -4px;
-  margin-bottom: 0;
-}
-
-.u-section-4 .u-layout-cell-1 {
-  min-height: 562px;
-}
-
-.u-section-4 .u-image-1 {
-  height: 312px;
-  margin: 0 auto 0 0;
-}
-
-.u-section-4 .u-text-3 {
-  font-size: 0.875rem;
-  font-style: italic;
-  margin: 33px 20px 0;
 }
 
 .u-section-4 .u-btn-2 {
@@ -476,44 +517,7 @@
   letter-spacing: 1px;
   font-weight: 700;
   border-style: none;
-  margin: 27px 20px 0;
-}
-
-.u-section-4 .u-layout-cell-2 {
-  background-image: none;
-  min-height: 562px;
-}
-
-.u-section-4 .u-image-2 {
-  height: 312px;
-  margin: 0 auto 0 0;
-}
-
-.u-section-4 .u-text-4 {
-  font-style: italic;
-  font-size: 0.875rem;
-  margin: 33px 20px 27px;
-}
-
-.u-section-4 .u-btn-3 {
-  margin-left: 20px;
-  margin-right: 20px;
-  text-transform: uppercase;
-  font-size: 0.875rem;
-  letter-spacing: 1px;
-  background-image: none;
-  font-weight: 700;
-  border-style: none;
-}
-
-.u-section-4 .u-btn-4 {
-  background-image: none;
-  text-transform: uppercase;
-  font-size: 0.875rem;
-  letter-spacing: 1px;
-  font-weight: 700;
-  border-style: none;
-  margin: -21px 20px 60px auto;
+  margin: 402px 21px 60px auto;
 }
 
 @media (max-width: 1199px) {
@@ -521,61 +525,28 @@
     min-height: 806px;
   }
 
-  .u-section-4 .u-text-1 {
+  .u-section-4 .u-blog-1 {
+    min-height: 375px;
+  }
+
+  .u-section-4 .u-repeater-1 {
+    grid-template-columns: repeat(2, calc(50% - 5px));
+  }
+
+  .u-section-4 .u-text-9 {
     margin-left: 16px;
     margin-right: 16px;
     position: relative;
   }
 
-  .u-section-4 .u-text-2 {
+  .u-section-4 .u-text-10 {
     margin-left: 16px;
     margin-right: 16px;
     position: relative;
-  }
-
-  .u-section-4 .u-layout-cell-1 {
-    min-height: 463px;
-  }
-
-  .u-section-4 .u-image-1 {
-    height: 257px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-4 .u-text-3 {
-    margin-left: 0;
-    margin-right: 0;
   }
 
   .u-section-4 .u-btn-2 {
-    position: relative;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-4 .u-layout-cell-2 {
-    min-height: 442px;
-  }
-
-  .u-section-4 .u-image-2 {
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-4 .u-text-4 {
-    margin-left: 16px;
-    margin-right: 16px;
-  }
-
-  .u-section-4 .u-btn-3 {
-    margin-left: 16px;
-    margin-right: 16px;
-    position: relative;
-  }
-
-  .u-section-4 .u-btn-4 {
-    margin-top: 82px;
+    margin-top: 578px;
     margin-right: 0;
     margin-bottom: 0;
   }
@@ -586,78 +557,67 @@
     min-height: 542px;
   }
 
+  .u-section-4 .u-repeater-1 {
+    grid-auto-columns: calc(100% - 0px);
+    grid-template-columns: 100%;
+  }
+
   .u-section-4 .u-group-1 {
     width: 720px;
   }
 
-  .u-section-4 .u-text-1 {
+  .u-section-4 .u-text-9 {
     margin-left: 13px;
     margin-right: 13px;
   }
 
-  .u-section-4 .u-text-2 {
+  .u-section-4 .u-text-10 {
     margin-left: 13px;
     margin-right: 13px;
-  }
-
-  .u-section-4 .u-layout-cell-1 {
-    min-height: 100px;
-  }
-
-  .u-section-4 .u-image-1 {
-    height: 197px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-4 .u-text-4 {
-    margin-left: 13px;
-    margin-right: 13px;
-  }
-
-  .u-section-4 .u-btn-3 {
-    margin-left: 13px;
-    margin-right: 13px;
-  }
-
-  .u-section-4 .u-btn-4 {
-    margin-top: 38px;
   }
 }
 
 @media (max-width: 767px) {
+  .u-section-4 .u-repeater-1 {
+    grid-auto-columns: 100%;
+  }
+
+  .u-section-4 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-4 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-4 .u-container-layout-3 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-4 .u-container-layout-4 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
   .u-section-4 .u-group-1 {
     width: 540px;
   }
 
-  .u-section-4 .u-text-1 {
+  .u-section-4 .u-text-9 {
     margin-left: 9px;
     margin-right: 9px;
   }
 
-  .u-section-4 .u-text-2 {
+  .u-section-4 .u-text-10 {
     margin-left: 9px;
     margin-right: 9px;
   }
 
-  .u-section-4 .u-image-1 {
-    height: 296px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-4 .u-text-4 {
-    margin-left: 9px;
-    margin-right: 9px;
-  }
-
-  .u-section-4 .u-btn-3 {
-    margin-left: 9px;
-    margin-right: 9px;
-  }
-
-  .u-section-4 .u-btn-4 {
-    margin-top: 20px;
+  .u-section-4 .u-btn-2 {
+    margin-top: 1000px;
     margin-bottom: 60px;
   }
 }
@@ -667,30 +627,18 @@
     width: 340px;
   }
 
-  .u-section-4 .u-text-1 {
+  .u-section-4 .u-text-9 {
     margin-left: 6px;
     margin-right: 6px;
   }
 
-  .u-section-4 .u-text-2 {
+  .u-section-4 .u-text-10 {
     margin-left: 6px;
     margin-right: 6px;
   }
 
-  .u-section-4 .u-image-1 {
-    height: 186px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-4 .u-text-4 {
-    margin-left: 6px;
-    margin-right: 6px;
-  }
-
-  .u-section-4 .u-btn-3 {
-    margin-left: 6px;
-    margin-right: 6px;
+  .u-section-4 .u-btn-2 {
+    margin-top: 956px;
   }
 }.u-section-5 .u-sheet-1 {
   min-height: 778px;
