--- a/Blog.css
+++ b/Blog.css
@@ -1,147 +1,190 @@
- .u-section-1 {
-  background-image: linear-gradient(0deg, rgba(41,46,51,0.6), rgba(41,46,51,0.6)), url("images/14e4d769443273705cb4464caa292a15.jpeg");
-  background-position: 50% 50%;
+.u-section-1 .u-sheet-1 {
+  min-height: 630px;
 }
 
-.u-section-1 .u-sheet-1 {
-  min-height: 864px;
+.u-section-1 .u-blog-1 {
+  margin-top: 60px;
+  margin-bottom: 60px;
+  height: auto;
+}
+
+.u-section-1 .u-repeater-1 {
+  grid-template-columns: calc(50% - 5px) calc(50% - 5px);
+  grid-gap: 10px 10px;
+  min-height: 595px;
+}
+
+.u-section-1 .u-container-layout-1 {
+  padding: 30px;
 }
 
 .u-section-1 .u-image-1 {
-  width: 300px;
-  height: 284px;
-  margin: 80px auto 0;
-}
-
-.u-section-1 .u-text-1 {
-  font-size: 4.5rem;
-  font-family: Lato, sans-serif;
-  text-shadow: 2px 2px 8px rgba(66,84,101,0.4);
-  text-transform: uppercase;
-  font-weight: 700;
-  letter-spacing: 2px;
-  margin: 80px 85px 0;
-}
-
-.u-section-1 .u-line-1 {
-  width: 912px;
-  height: 3px;
-  margin: 22px auto 0 114px;
+  height: 298px;
+  margin-top: 20px;
 }
 
 .u-section-1 .u-text-2 {
-  font-family: Roboto, sans-serif;
-  letter-spacing: 2px;
-  line-height: 1.4;
-  font-weight: 300;
-  font-size: 1.5rem;
-  text-transform: none;
-  text-shadow: 2px 2px 8px rgba(0,0,0,0.4);
-  margin: 22px 151px 0;
+  margin-bottom: 0;
 }
 
-.u-section-1 .u-social-icons-1 {
-  white-space: nowrap;
-  height: 32px;
-  min-height: 16px;
-  width: 200px;
-  min-width: 120px;
-  animation-duration: 1000ms;
-  margin: 80px auto 60px;
+.u-section-1 .u-btn-1 {
+  margin-bottom: 20px;
+  margin-top: 20px;
+  letter-spacing: 1px;
+  border-style: none;
+  font-weight: 700;
+  text-transform: uppercase;
+  background-image: none;
 }
 
-.u-section-1 .u-icon-1 {
-  height: 100%;
+.u-section-1 .u-container-layout-2 {
+  padding: 30px;
 }
 
-.u-section-1 .u-icon-2 {
-  height: 100%;
+.u-section-1 .u-image-2 {
+  height: 298px;
+  margin-top: 20px;
 }
 
-.u-section-1 .u-icon-3 {
-  height: 100%;
+.u-section-1 .u-text-4 {
+  margin-bottom: 0;
 }
 
-.u-section-1 .u-icon-4 {
-  height: 100%;
+.u-section-1 .u-btn-2 {
+  margin-bottom: 20px;
+  margin-top: 20px;
+  letter-spacing: 1px;
+  border-style: none;
+  font-weight: 700;
+  text-transform: uppercase;
+  background-image: none;
 }
 
-.u-section-1 .u-icon-5 {
-  height: 100%;
-  color: rgb(255, 255, 255) !important;
+.u-section-1 .u-container-layout-3 {
+  padding: 30px;
+}
+
+.u-section-1 .u-image-3 {
+  height: 298px;
+  margin-top: 20px;
+}
+
+.u-section-1 .u-text-6 {
+  margin-bottom: 0;
+}
+
+.u-section-1 .u-btn-3 {
+  margin-bottom: 20px;
+  margin-top: 20px;
+  letter-spacing: 1px;
+  border-style: none;
+  font-weight: 700;
+  text-transform: uppercase;
+  background-image: none;
+}
+
+.u-section-1 .u-container-layout-4 {
+  padding: 30px;
+}
+
+.u-section-1 .u-image-4 {
+  height: 298px;
+  margin-top: 20px;
+}
+
+.u-section-1 .u-text-8 {
+  margin-bottom: 0;
+}
+
+.u-section-1 .u-btn-4 {
+  margin-bottom: 20px;
+  margin-top: 20px;
+  letter-spacing: 1px;
+  border-style: none;
+  font-weight: 700;
+  text-transform: uppercase;
+  background-image: none;
+}
+
+.u-section-1 .u-container-layout-5 {
+  padding: 30px;
+}
+
+.u-section-1 .u-image-5 {
+  height: 298px;
+  margin-top: 20px;
+}
+
+.u-section-1 .u-text-10 {
+  margin-bottom: 0;
+}
+
+.u-section-1 .u-btn-5 {
+  margin-bottom: 20px;
+  margin-top: 20px;
+  letter-spacing: 1px;
+  border-style: none;
+  font-weight: 700;
+  text-transform: uppercase;
+  background-image: none;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 712px;
+    min-height: 526px;
   }
 
-  .u-section-1 .u-text-1 {
-    margin-left: 0;
-    margin-right: 0;
+  .u-section-1 .u-repeater-1 {
+    min-height: 491px;
   }
 
-  .u-section-1 .u-line-1 {
-    margin-left: 28px;
+  .u-section-1 .u-btn-2 {
+    padding: 0;
   }
 
-  .u-section-1 .u-text-2 {
-    width: 839px;
-    margin-right: 50px;
-    margin-left: 51px;
+  .u-section-1 .u-btn-3 {
+    padding: 0;
+  }
+
+  .u-section-1 .u-btn-4 {
+    padding: 0;
+  }
+
+  .u-section-1 .u-btn-5 {
+    padding: 0;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 545px;
-  }
-
-  .u-section-1 .u-text-1 {
-    font-size: 3.4375rem;
-  }
-
-  .u-section-1 .u-line-1 {
-    width: 720px;
-    margin-left: 0;
-  }
-
-  .u-section-1 .u-text-2 {
-    width: 720px;
-    margin-left: 0;
-    margin-right: 0;
+  .u-section-1 .u-repeater-1 {
+    grid-template-columns: 100%;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 915px;
+  .u-section-1 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
   }
 
-  .u-section-1 .u-line-1 {
-    width: 540px;
+  .u-section-1 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
   }
 
-  .u-section-1 .u-text-2 {
-    width: 540px;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 975px;
+  .u-section-1 .u-container-layout-3 {
+    padding-left: 10px;
+    padding-right: 10px;
   }
 
-  .u-section-1 .u-text-1 {
-    font-size: 2.25rem;
+  .u-section-1 .u-container-layout-4 {
+    padding-left: 10px;
+    padding-right: 10px;
   }
 
-  .u-section-1 .u-line-1 {
-    width: 340px;
-  }
-
-  .u-section-1 .u-text-2 {
-    width: 340px;
+  .u-section-1 .u-container-layout-5 {
+    padding-left: 10px;
+    padding-right: 10px;
   }
 } .u-section-2 {
   background-image: none;
@@ -150,7 +193,7 @@
 
 .u-section-2 .u-layout-wrap-1 {
   width: 1140px;
-  margin: 0 auto;
+  margin: 0 auto 60px;
 }
 
 .u-section-2 .u-layout-cell-1 {
@@ -220,7 +263,7 @@
 
 @media (max-width: 1199px) {
    .u-section-2 {
-    min-height: 299px;
+    min-height: 206px;
   }
 
   .u-section-2 .u-layout-wrap-1 {
@@ -280,7 +323,7 @@
 
 @media (max-width: 991px) {
    .u-section-2 {
-    min-height: 169px;
+    min-height: 76px;
   }
 
   .u-section-2 .u-layout-wrap-1 {
@@ -324,7 +367,7 @@
 
 @media (max-width: 767px) {
    .u-section-2 {
-    min-height: 269px;
+    min-height: 176px;
   }
 
   .u-section-2 .u-layout-wrap-1 {
