--- a/Le-projet-SYL.css
+++ b/Le-projet-SYL.css
@@ -425,7 +425,7 @@
 .u-section-4 .u-image-3 {
   width: 200px;
   height: 200px;
-  background-image: url("images/Logo-SYL-feuille.png");
+  background-image: url("images/david.jpg");
   background-position: 50% 50%;
   margin: 0 auto;
 }
@@ -448,32 +448,17 @@
     margin-left: initial;
   }
 
-  .u-section-4 .u-image-1 {
-    margin-top: -1px;
-  }
-
   .u-section-4 .u-text-1 {
-    margin-top: 21px;
     margin-left: 0;
     margin-right: 0;
-  }
-
-  .u-section-4 .u-image-2 {
-    margin-top: -1px;
   }
 
   .u-section-4 .u-text-2 {
-    margin-top: 21px;
     margin-left: 0;
     margin-right: 0;
   }
 
-  .u-section-4 .u-image-3 {
-    margin-top: -1px;
-  }
-
   .u-section-4 .u-text-3 {
-    margin-top: 21px;
     margin-left: 0;
     margin-right: 0;
   }
