--- a/Le-projet-SYL.css
+++ b/Le-projet-SYL.css
@@ -1,5 +1,5 @@
  .u-section-1 {
-  background-image: url("images/pexels-eric-sanman-1365425.jpg");
+  background-image: url("images/j32.JPG");
   background-position: 50% 50%;
 }
 
