--- a/Galerie.css
+++ b/Galerie.css
@@ -3,7 +3,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 1510px;
+  min-height: 2680px;
 }
 
 .u-section-1 .u-text-1 {
@@ -29,15 +29,15 @@
 }
 
 .u-section-1 .u-gallery-1 {
-  height: 1126px;
-  margin-top: 35px;
-  margin-bottom: 60px;
-  grid-gap: 17px 17px;
+  height: 1140px;
+  margin-top: 20px;
+  margin-bottom: 0;
+  width: 1140px;
 }
 
 .u-section-1 .u-gallery-inner-1 {
-  grid-template-columns: repeat(3, auto);
-  grid-gap: 17px;
+  grid-gap: 17px 17px;
+  grid-template-columns: auto auto auto;
 }
 
 .u-section-1 .u-over-slide-1 {
@@ -85,8 +85,15 @@
   padding: 20px;
 }
 
-.u-section-1 .u-gallery-item-10 {
-  margin: 32px 0 3px;
+.u-section-1 .u-gallery-2 {
+  height: 1126px;
+  grid-gap: 17px 17px;
+  margin: 17px 0 0;
+}
+
+.u-section-1 .u-gallery-inner-2 {
+  grid-template-columns: repeat(3, auto);
+  grid-gap: 17px;
 }
 
 .u-section-1 .u-over-slide-10 {
@@ -94,19 +101,91 @@
   padding: 20px;
 }
 
+.u-section-1 .u-over-slide-11 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-1 .u-over-slide-12 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-1 .u-over-slide-13 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-1 .u-over-slide-14 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-1 .u-over-slide-15 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-1 .u-over-slide-16 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-1 .u-over-slide-17 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-1 .u-over-slide-18 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-1 .u-gallery-item-19 {
+  margin: 50px 0 3px;
+}
+
+.u-section-1 .u-over-slide-19 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-1 .u-gallery-item-20 {
+  margin-left: 0;
+  margin-bottom: 0;
+}
+
+.u-section-1 .u-over-slide-20 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1312px;
+    min-height: 2117px;
   }
 
   .u-section-1 .u-gallery-1 {
+    width: 940px;
+    margin-left: auto;
+    margin-right: auto;
+    height: 775px;
+  }
+
+  .u-section-1 .u-gallery-inner-1 {
+    grid-template-columns: repeat(3, auto);
+  }
+
+  .u-section-1 .u-gallery-2 {
     height: 928px;
+    margin-right: initial;
+    margin-left: initial;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 2161px;
+    min-height: 3675px;
   }
 
   .u-section-1 .u-line-1 {
@@ -114,17 +193,28 @@
   }
 
   .u-section-1 .u-gallery-1 {
-    height: 1777px;
+    width: 720px;
+    height: 1484px;
   }
 
   .u-section-1 .u-gallery-inner-1 {
+    grid-template-columns: repeat(2, auto);
+  }
+
+  .u-section-1 .u-gallery-2 {
+    height: 1777px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-1 .u-gallery-inner-2 {
     grid-template-columns: repeat(2, auto);
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 5182px;
+    min-height: 9219px;
   }
 
   .u-section-1 .u-text-1 {
@@ -140,17 +230,28 @@
   }
 
   .u-section-1 .u-gallery-1 {
-    height: 4798px;
+    width: 540px;
+    height: 4007px;
   }
 
   .u-section-1 .u-gallery-inner-1 {
+    grid-template-columns: repeat(1, auto);
+  }
+
+  .u-section-1 .u-gallery-2 {
+    height: 4798px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-1 .u-gallery-inner-2 {
     grid-template-columns: repeat(1, auto);
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 3405px;
+    min-height: 5958px;
   }
 
   .u-section-1 .u-text-1 {
@@ -167,29 +268,37 @@
   }
 
   .u-section-1 .u-gallery-1 {
+    width: 340px;
+    height: 2523px;
+  }
+
+  .u-section-1 .u-gallery-2 {
     height: 3021px;
+    margin-right: initial;
+    margin-left: initial;
   }
 }.u-section-2 .u-sheet-1 {
-  min-height: 600px;
+  min-height: 738px;
 }
 
 .u-section-2 .u-video-1 {
-  height: 500px;
-  margin: 50px 0;
+  width: 1141px;
+  height: 642px;
+  margin: 20px 0 60px;
 }
 
 .u-section-2 .embed-responsive-1 {
   position: absolute;
-  width: 178%;
-  left: -39%;
-  height: 178%;
-  top: -39%;
 }
 
 @media (max-width: 1199px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 600px;
+  }
+
   .u-section-2 .u-video-1 {
-    margin-right: initial;
-    margin-left: initial;
+    width: 940px;
+    height: 529px;
   }
 }
 
@@ -199,9 +308,8 @@
   }
 
   .u-section-2 .u-video-1 {
-    height: 404px;
-    margin-right: initial;
-    margin-left: initial;
+    width: 720px;
+    height: 405px;
   }
 }
 
@@ -211,9 +319,8 @@
   }
 
   .u-section-2 .u-video-1 {
-    height: 310px;
-    margin-right: initial;
-    margin-left: initial;
+    width: 540px;
+    height: 304px;
   }
 }
 
@@ -223,16 +330,8 @@
   }
 
   .u-section-2 .u-video-1 {
-    height: 200px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-2 .embed-responsive-1 {
-    width: 261%;
-    left: -81%;
-    height: 100%;
-    top: 0%;
+    width: 340px;
+    height: 191px;
   }
 }.u-section-3 .u-sheet-1 {
   min-height: 1338px;
