--- a/Accueil.css
+++ b/Accueil.css
@@ -217,7 +217,7 @@
 }
 
 .u-section-2 .u-image-4 {
-  background-image: url("images/j42.jpeg");
+  background-image: url("images/j42-15.jpeg");
   min-height: 282px;
   background-position: 50% 50%;
 }
@@ -684,7 +684,7 @@
 
 .u-section-5 .u-image-1 {
   min-height: 339px;
-  background-image: url("images/unnamed.jpg");
+  background-image: url("images/unnamed-20.jpg");
   background-position: 50% 50%;
 }
 
@@ -704,7 +704,7 @@
 
 .u-section-5 .u-image-3 {
   min-height: 678px;
-  background-image: url("images/j5.JPG");
+  background-image: url("images/j5-22.JPG");
   background-position: 67.05% 0%;
 }
 
