--- a/Contact.css
+++ b/Contact.css
@@ -60,7 +60,7 @@
 
 .u-section-1 .u-image-1 {
   min-height: 406px;
-  background-image: url("images/j41.jpeg");
+  background-image: url("images/j41-38.jpeg");
   background-position: 50% 50%;
 }
 
